WIP
Testcontainers

Add NetFilterIntegrationTest.java

wip

Hmm

fix

Change KafkaProxyInitializer to use new NetHandler

wip

wup